# NdkTest

./: .gitignore  C语言.chm  FFmpeg开发.txt  FMOD开发.txt  JNI开发.txt  c参考手册.rar
07_31_C_01_指针和指针赋值_外挂原理/c_01/: c_01.vcxproj
08_01_C_02_二级指针_函数指针_数组/c_02/: c_02.vcxproj
08_03_C_03_动态内存分配/: 08_03_C_03_动态内存分配.sln
08_03_C_03_动态内存分配/08_03_C_03_动态内存分配/: 01.c  08_03_C_03_动态内存分配.vcxproj
08_03_c_03_字符指针_字符串/c_03/: 02.c  c_03.vcxproj  c_03.vcxproj.filters
08_07_C_04_结构体指针/: 08_07_C_04_结构体指针.sln
08_07_C_04_结构体指针/08_07_C_04_结构体指针/: 01.c  08_07_C_04_结构体指针.vcxproj
08_08_C_05_2_io/: 08_08_C_05_2_io.sln
08_08_C_05_2_io/08_08_C_05_2_io/: 01.c  08_08_C_05_2_io.vcxproj
08_08_C_05_2_io/files/: LogView.ini  friends_crpypt.txt
08_08_C_05_联合体_枚举/: 08_08_C_05_联合体_枚举.sln
08_08_C_05_联合体_枚举/08_08_C_05_联合体_枚举/: 01.c  08_08_C_05_联合体_枚举.vcxproj
08_10_C_06_预编译/: 08_10_C_06_预编译.sln
08_10_C_06_预编译/08_10_C_06_预编译/: 01.c  08_10_C_06_预编译.vcxproj  08_10_C_06_预编译.vcxproj.filters  A.h  B.h  my.txt
08_24_cpp_study/: 08_24_cpp_study.sln
08_24_cpp_study/08_24_cpp_study/: 01.cpp  08_24_cpp_study.vcxproj  08_24_cpp_study.vcxproj.filters  MyTreacher.cpp  MyTreacher.h
08_31_cpp_study_2/: 08_31_cpp_study_2.sln
08_31_cpp_study_2/08_31_cpp_study_2/: 01.cpp  08_31_cpp_study_2.vcxproj  08_31_cpp_study_2.vcxproj.filters  Jet.cpp  Jet.h  Jet2.cpp  Jet2.h  Plane.h  Plane2.cpp  Plane2.h
09_05_cpp_study_3/: 09_05_cpp_study_3.sln
09_07_cpp_study_4/: 09_07_cpp_study_4.sln
FFmpeg/: 详见FFmpeg.url
Jni_encrypt/: .project  AndroidManifest.xml
MyFmodTest/app/: CMakeLists.txt  build.gradle
MyFmodTest/app/src/androidTest/java/com/ethanco/myfmodtest/: ExampleInstrumentedTest.java
MyFmodTest/app/src/main/: AndroidManifest.xml
MyFmodTest/app/src/main/cpp/: native-lib.cpp
MyFmodTest/app/src/main/java/com/ethanco/myfmodtest/: FmodUtil.java  MainActivity.java
MyFmodTest/app/src/main/res/values/: strings.xml
MyFmodTest/app/src/test/java/com/ethanco/myfmodtest/: ExampleUnitTest.java
NDKTTTTTT/app/: CMakeLists.txt  build.gradle
NDKTTTTTT/app/src/androidTest/java/com/ethanco/ndktttttt/: ExampleInstrumentedTest.java
NDKTTTTTT/app/src/main/: AndroidManifest.xml
NDKTTTTTT/app/src/main/cpp/: com_ethanco_ndktttttt_Utils.h  sound.cpp
NDKTTTTTT/app/src/main/cpp/inc/: fmod_codec.h  fmod_dsp.h  fmod_output.h
NDKTTTTTT/app/src/main/java/com/ethanco/ndktttttt/: MainActivity.java  Utils.java
NDKTTTTTT/app/src/main/res/layout/: activity_main.xml
NDKTTTTTT/app/src/main/res/values/: strings.xml
NDKTTTTTT/app/src/test/java/com/ethanco/ndktttttt/: ExampleUnitTest.java
NDK_V2/MyWangyiPlayer/app/: CMakeLists.txt  build.gradle
NDK_V2/MyWangyiPlayer/app/src/androidTest/java/com/heiko/mywangyiplayer/: ExampleInstrumentedTest.java
NDK_V2/MyWangyiPlayer/app/src/main/: AndroidManifest.xml
NDK_V2/MyWangyiPlayer/app/src/main/cpp/: native-lib.cpp
NDK_V2/MyWangyiPlayer/app/src/main/java/com/heiko/mywangyiplayer/: MainActivity.java  Player.java
NDK_V2/MyWangyiPlayer/app/src/main/res/layout/: activity_main.xml
NDK_V2/MyWangyiPlayer/app/src/test/java/com/heiko/mywangyiplayer/: ExampleUnitTest.java
NDK_V2/OpenCVTest/OpenCVTest/: CMakeLists.txt  OpenCVTest.cpp  OpenCVTest.h
SocketTest/: readme.txt
c_01/: c_01.sln
c_01/c_01/: 01.c
c_02/: c_02.sln
c_03/: c_03.sln
jni_study/: jni_study.sln
(+114 files in other folders)
